Update assignment 0 jolie lheureux.ipynb

--- a/assignment 0 jolie lheureux.ipynb
+++ b/assignment 0 jolie lheureux.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "#Jolie L'Heuruex\n",
     "#uni: jel2227\n",
-    "#Caiti Levin helped me with this assignemnt "
+    "#Caiti Levin helped me with this assignemnt !!!"
    ]
   }
  ],
